force-app/main/default/objects/ShipmentItem/fields/AccountSalesCategory__c.field-meta.xml
<CustomField>
    <fullName>AccountSalesCategory__c</fullName>
    <label>Account Sales Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VEN</fullName>
            </value>
            <value>
                <fullName>GUS</fullName>
            </value>
            <value>
                <fullName>EKG</fullName>
            </value>
            <value>
                <fullName>GMV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>