force-app/main/default/objects/ShipmentItem/fields/ActualDeliveredQuantity__c.field-meta.xml
<CustomField>
    <fullName>ActualDeliveredQuantity__c</fullName>
    <description>UPDATE 14.09.26: SAP liefert hier nur die Menge umgerechnet in die Basiseinheit und nicht wie angenommen die tatsächliche Liefermenge - sobald das Mapping entfernt wurde, kann dieses Feld gelöscht werden</description>
    <label>Actual Delivered Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>