force-app/main/default/objects/ShipmentItem/fields/Charge__c.field-meta.xml
<CustomField>
    <fullName>Charge__c</fullName>
    <label>Charge</label>
    <length>35</length>
    <type>Text</type>
</CustomField>