force-app/main/default/objects/ShipmentItem/fields/ConversionFactorDenominator__c.field-meta.xml
<CustomField>
    <fullName>ConversionFactorDenominator__c</fullName>
    <label>Conversion Factor Denominator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>