force-app/main/default/objects/ShipmentItem/fields/ConversionFactorNumerator__c.field-meta.xml
<CustomField>
    <fullName>ConversionFactorNumerator__c</fullName>
    <label>Conversion Factor Numerator</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>