force-app/main/default/objects/ShipmentItem/fields/DeliveryItemCategory__c.field-meta.xml
<CustomField>
    <fullName>DeliveryItemCategory__c</fullName>
    <label>Delivery Item Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Z0BX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>