force-app/main/default/objects/ShipmentItem/fields/DeliveryItemVolume__c.field-meta.xml
<CustomField>
    <fullName>DeliveryItemVolume__c</fullName>
    <label>Delivery Item Volume</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>