force-app/main/default/objects/ShipmentItem/fields/ERPPositionNumber__c.field-meta.xml
<CustomField>
    <fullName>ERPPositionNumber__c</fullName>
    <label>ERP Position Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>