force-app/main/default/objects/ShipmentItem/fields/ERPTransportationGroup__c.field-meta.xml
<CustomField>
    <fullName>ERPTransportationGroup__c</fullName>
    <label>ERP Transportation Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
            </value>
            <value>
                <fullName>0002</fullName>
            </value>
            <value>
                <fullName>Z001</fullName>
            </value>
            <value>
                <fullName>Z100</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>