force-app/main/default/objects/ShipmentItem/fields/LoadingGroup__c.field-meta.xml
<CustomField>
    <fullName>LoadingGroup__c</fullName>
    <label>Loading Group</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>