force-app/main/default/objects/ShipmentItem/fields/OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>OrderItemId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order Item</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>Shipment_Items</relationshipName>
    <type>Lookup</type>
</CustomField>