force-app/main/default/objects/ShipmentItem/fields/OrganizationDivision__c.field-meta.xml
<CustomField>
    <fullName>OrganizationDivision__c</fullName>
    <defaultValue>TEXT(10)</defaultValue>
    <label>Organization Division</label>
    <length>5</length>
    <type>Text</type>
</CustomField>