force-app/main/default/objects/ShipmentItem/fields/OverdeliveryTolerance__c.field-meta.xml
<CustomField>
    <fullName>OverdeliveryTolerance__c</fullName>
    <label>Overdelivery Tolerance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>