force-app/main/default/objects/ShipmentItem/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>ShipmentItems</relationshipName>
    <type>Lookup</type>
</CustomField>