force-app/main/default/objects/ShipmentItem/fields/ProductGroup__c.field-meta.xml
<CustomField>
    <fullName>ProductGroup__c</fullName>
    <label>Product Group</label>
    <length>9</length>
    <type>Text</type>
</CustomField>