force-app/main/default/objects/ShipmentItem/fields/ProductionPlant__c.field-meta.xml
<CustomField>
    <fullName>ProductionPlant__c</fullName>
    <label>Production Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1100</fullName>
            </value>
            <value>
                <fullName>1200</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>