force-app/main/default/objects/ShipmentItem/fields/ReferenceDocumentDate__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDocumentDate__c</fullName>
    <label>Reference Document Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>