force-app/main/default/objects/ShipmentItem/fields/ReferenceDocumentItemNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDocumentItemNumber__c</fullName>
    <label>Reference Document Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>