force-app/main/default/objects/ShipmentItem/fields/ReferenceDocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDocumentNumber__c</fullName>
    <label>Reference Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>