force-app/main/default/objects/ShipmentItem/fields/ReferenceDocumentQualifier__c.field-meta.xml
<CustomField>
    <fullName>ReferenceDocumentQualifier__c</fullName>
    <label>Reference Document Qualifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>