force-app/main/default/objects/ShipmentItem/fields/RelatedOrder__c.field-meta.xml
<CustomField>
    <fullName>RelatedOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Shipment Items</relationshipLabel>
    <relationshipName>ShipmentItems</relationshipName>
    <type>Lookup</type>
</CustomField>