force-app/main/default/objects/ShipmentItem/fields/SalesUnit__c.field-meta.xml
<CustomField>
    <fullName>SalesUnit__c</fullName>
    <label>Sales Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PCE</fullName>
            </value>
            <value>
                <fullName>KAR</fullName>
            </value>
            <value>
                <fullName>PAL</fullName>
            </value>
            <value>
                <fullName>Z60</fullName>
            </value>
            <value>
                <fullName>Z69</fullName>
            </value>
            <value>
                <fullName>Z70</fullName>
            </value>
            <value>
                <fullName>ZLL</fullName>
            </value>
            <value>
                <fullName>ZLN</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>LAG</fullName>
            </value>
            <value>
                <fullName>SP</fullName>
            </value>
            <value>
                <fullName>ST</fullName>
            </value>
            <value>
                <fullName>G</fullName>
            </value>
            <value>
                <fullName>KT</fullName>
            </value>
            <value>
                <fullName>LB</fullName>
            </value>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>OZ</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>TON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>