force-app/main/default/objects/ShipmentItem/fields/StorageLocation__c.field-meta.xml
<CustomField>
    <fullName>StorageLocation__c</fullName>
    <label>Storage Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5444</fullName>
            </value>
            <value>
                <fullName>5500</fullName>
            </value>
            <value>
                <fullName>5501</fullName>
            </value>
            <value>
                <fullName>9577</fullName>
            </value>
            <value>
                <fullName>9901</fullName>
            </value>
            <value>
                <fullName>9913</fullName>
            </value>
            <value>
                <fullName>9920</fullName>
            </value>
            <value>
                <fullName>9921</fullName>
            </value>
            <value>
                <fullName>9922</fullName>
            </value>
            <value>
                <fullName>9923</fullName>
            </value>
            <value>
                <fullName>9925</fullName>
            </value>
            <value>
                <fullName>9930</fullName>
            </value>
            <value>
                <fullName>9950</fullName>
            </value>
            <value>
                <fullName>9988</fullName>
            </value>
            <value>
                <fullName>RC01</fullName>
            </value>
            <value>
                <fullName>RC02</fullName>
            </value>
            <value>
                <fullName>RC03</fullName>
            </value>
            <value>
                <fullName>RC04</fullName>
            </value>
            <value>
                <fullName>RC05</fullName>
            </value>
            <value>
                <fullName>RC06</fullName>
            </value>
            <value>
                <fullName>RC07</fullName>
            </value>
            <value>
                <fullName>RC08</fullName>
            </value>
            <value>
                <fullName>RC09</fullName>
            </value>
            <value>
                <fullName>RC10</fullName>
            </value>
            <value>
                <fullName>RW01</fullName>
            </value>
            <value>
                <fullName>RW99</fullName>
            </value>
            <value>
                <fullName>VB16</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>