force-app/main/default/objects/ShipmentItem/fields/UnderdeliveryTolerance__c.field-meta.xml
<CustomField>
    <fullName>UnderdeliveryTolerance__c</fullName>
    <label>Underdelivery Tolerance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>