force-app/main/default/objects/ShipmentItem/fields/UnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>UnitOfMeasure__c</fullName>
    <label>Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PCE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>